# MarketGuitarCrew

./: Dockerfile  README.md  image_base64.txt  index.html  pyproject.toml  requirements.txt  scraper.py  server.py  streamlit_app.py
src/guitarmarket/: crew.py  main.py  streamlit_app.py
src/guitarmarket/config/: agents.yaml  tasks.yaml
