[project]
name = "guitarmarket"
version = "0.1.0"
description = "GuitarMarket using crewAI"
authors = [{ name = "James Jansma", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "playwright>=1.41.0"
]

[project.scripts]
guitarmarket = "guitarmarket.main:run"
run_crew = "guitarmarket.main:run"
train = "guitarmarket.main:train"
replay = "guitarmarket.main:replay"
test = "guitarmarket.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
