[project]
name = "guitarmarket"
version = "0.1.0"
description = "GuitarMarket using crewAI"
authors = [{ name = "James Jansma", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi >= 0.110.0",
    "uvicorn >= 0.29.0",
    "crewai >= 0.102.0",
    "crewai-tools >= 0.4.0",
    "playwright >= 1.41.0",
    "litellm >= 0.1.570",
    "pydantic >= 2.6.0",
    "python-dotenv >= 1.0.0",
    "beautifulsoup4 >= 4.12.3",
    "requests >= 2.31.0",
    "Pillow >= 10.3.0"
]

[project.scripts]
guitarmarket = "guitarmarket.main:run"
run_crew = "guitarmarket.main:run"
train = "guitarmarket.main:train"
replay = "guitarmarket.main:replay"
test = "guitarmarket.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
